Fixes #165, slightly more legible enabled title color in demo

--- a/tools/demo/index.css
+++ b/tools/demo/index.css
@@ -33,9 +33,10 @@ body {
 }
 .dg .title {
     color: #999;
+    user-select: none;
 }
 .dg.enabled .title {
-    color: #fff;
+    color: #ea4080;
 }
 #logo img {
     display: block;
